Fix bug and beautifer examples

--- a/src/flexbox-grid.css
+++ b/src/flexbox-grid.css
@@ -30,6 +30,7 @@
 .row.column-begin-top { align-items: flex-start; }
 .row.column-begin-bottom { align-items: flex-end; }
 .row.column-full-height { align-items: stretch; }
+.row.column-full-height > * { min-height: 100%; }
 .row.column-center { align-items: center; }
 .row.column-baseline { align-items: baseline; }
 
@@ -69,7 +70,7 @@
     /* self align */
     .row > .small-begin-top { align-self: flex-start; }
     .row > .small-begin-bottom { align-self: flex-end; }
-    .row > .small-full-height { align-self: stretch; }
+    .row > .small-full-height { align-self: stretch; min-height: 100%; }
     .row > .small-center { align-self: center; }
     .row > .small-baseline { align-self: baseline; }
     
@@ -140,19 +141,19 @@
     .row > .small-6.small-offset-6 { width: calc(50% + 50%); }
     
     /* order */
-    .row > [class*=small-order-0], .row > .small-order-0-and-after ~ * { order: 0; }
-    .row > [class*=small-order-1], .row > .small-order-1-and-after ~ * { order: 1; }
-    .row > [class*=small-order-2], .row > .small-order-2-and-after ~ * { order: 2; }
-    .row > [class*=small-order-3], .row > .small-order-3-and-after ~ * { order: 3; }
-    .row > [class*=small-order-4], .row > .small-order-4-and-after ~ * { order: 4; }
-    .row > [class*=small-order-5], .row > .small-order-5-and-after ~ * { order: 5; }
-    .row > [class*=small-order-6], .row > .small-order-6-and-after ~ * { order: 6; }
-    .row > [class*=small-order-7], .row > .small-order-7-and-after ~ * { order: 7; }
-    .row > [class*=small-order-8], .row > .small-order-8-and-after ~ * { order: 8; }
-    .row > [class*=small-order-9], .row > .small-order-9-and-after ~ * { order: 9; }
-    .row > [class*=small-order-10], .row > .small-order-10-and-after ~ * { order: 10; }
-    .row > [class*=small-order-11], .row > .small-order-11-and-after ~ * { order: 11; }
-    .row > [class*=small-order-12], .row > .small-order-12-and-after ~ * { order: 12; }
+    .row > [class*=small-order-0], .row > .small-order-0-and-after ~ *:not([class*=order-]) { order: 0; }
+    .row > [class*=small-order-1], .row > .small-order-1-and-after ~ *:not([class*=order-]) { order: 1; }
+    .row > [class*=small-order-2], .row > .small-order-2-and-after ~ *:not([class*=order-]) { order: 2; }
+    .row > [class*=small-order-3], .row > .small-order-3-and-after ~ *:not([class*=order-]) { order: 3; }
+    .row > [class*=small-order-4], .row > .small-order-4-and-after ~ *:not([class*=order-]) { order: 4; }
+    .row > [class*=small-order-5], .row > .small-order-5-and-after ~ *:not([class*=order-]) { order: 5; }
+    .row > [class*=small-order-6], .row > .small-order-6-and-after ~ *:not([class*=order-]) { order: 6; }
+    .row > [class*=small-order-7], .row > .small-order-7-and-after ~ *:not([class*=order-]) { order: 7; }
+    .row > [class*=small-order-8], .row > .small-order-8-and-after ~ *:not([class*=order-]) { order: 8; }
+    .row > [class*=small-order-9], .row > .small-order-9-and-after ~ *:not([class*=order-]) { order: 9; }
+    .row > [class*=small-order-10], .row > .small-order-10-and-after ~ *:not([class*=order-]) { order: 10; }
+    .row > [class*=small-order-11], .row > .small-order-11-and-after ~ *:not([class*=order-]) { order: 11; }
+    .row > [class*=small-order-12], .row > .small-order-12-and-after ~ *:not([class*=order-]) { order: 12; }
     
 }
 
@@ -188,7 +189,7 @@
     /* self align */
     .row > .medium-begin-top { align-self: flex-start; }
     .row > .medium-begin-bottom { align-self: flex-end; }
-    .row > .medium-full-height { align-self: stretch; }
+    .row > .medium-full-height { align-self: stretch; min-height: 100%; }
     .row > .medium-center { align-self: center; }
     .row > .medium-baseline { align-self: baseline; }
     
@@ -259,19 +260,19 @@
     .row > .medium-6.medium-offset-6 { width: calc(50% + 50%); }
     
     /* order */
-    .row > [class*=medium-order-0], .row > .medium-order-0-and-after ~ * { order: 0; }
-    .row > [class*=medium-order-1], .row > .medium-order-1-and-after ~ * { order: 1; }
-    .row > [class*=medium-order-2], .row > .medium-order-2-and-after ~ * { order: 2; }
-    .row > [class*=medium-order-3], .row > .medium-order-3-and-after ~ * { order: 3; }
-    .row > [class*=medium-order-4], .row > .medium-order-4-and-after ~ * { order: 4; }
-    .row > [class*=medium-order-5], .row > .medium-order-5-and-after ~ * { order: 5; }
-    .row > [class*=medium-order-6], .row > .medium-order-6-and-after ~ * { order: 6; }
-    .row > [class*=medium-order-7], .row > .medium-order-7-and-after ~ * { order: 7; }
-    .row > [class*=medium-order-8], .row > .medium-order-8-and-after ~ * { order: 8; }
-    .row > [class*=medium-order-9], .row > .medium-order-9-and-after ~ * { order: 9; }
-    .row > [class*=medium-order-10], .row > .medium-order-10-and-after ~ * { order: 10; }
-    .row > [class*=medium-order-11], .row > .medium-order-11-and-after ~ * { order: 11; }
-    .row > [class*=medium-order-12], .row > .medium-order-12-and-after ~ * { order: 12; }
+    .row > [class*=medium-order-0], .row > .medium-order-0-and-after ~ *:not([class*=order-]) { order: 0; }
+    .row > [class*=medium-order-1], .row > .medium-order-1-and-after ~ *:not([class*=order-]) { order: 1; }
+    .row > [class*=medium-order-2], .row > .medium-order-2-and-after ~ *:not([class*=order-]) { order: 2; }
+    .row > [class*=medium-order-3], .row > .medium-order-3-and-after ~ *:not([class*=order-]) { order: 3; }
+    .row > [class*=medium-order-4], .row > .medium-order-4-and-after ~ *:not([class*=order-]) { order: 4; }
+    .row > [class*=medium-order-5], .row > .medium-order-5-and-after ~ *:not([class*=order-]) { order: 5; }
+    .row > [class*=medium-order-6], .row > .medium-order-6-and-after ~ *:not([class*=order-]) { order: 6; }
+    .row > [class*=medium-order-7], .row > .medium-order-7-and-after ~ *:not([class*=order-]) { order: 7; }
+    .row > [class*=medium-order-8], .row > .medium-order-8-and-after ~ *:not([class*=order-]) { order: 8; }
+    .row > [class*=medium-order-9], .row > .medium-order-9-and-after ~ *:not([class*=order-]) { order: 9; }
+    .row > [class*=medium-order-10], .row > .medium-order-10-and-after ~ *:not([class*=order-]) { order: 10; }
+    .row > [class*=medium-order-11], .row > .medium-order-11-and-after ~ *:not([class*=order-]) { order: 11; }
+    .row > [class*=medium-order-12], .row > .medium-order-12-and-after ~ *:not([class*=order-]) { order: 12; }
 }
 
 /* large
@@ -306,7 +307,7 @@
     /* self align */
     .row > .large-begin-top { align-self: flex-start; }
     .row > .large-begin-bottom { align-self: flex-end; }
-    .row > .large-full-height { align-self: stretch; }
+    .row > .large-full-height { align-self: stretch; min-height: 100%; }
     .row > .large-center { align-self: center; }
     .row > .large-baseline { align-self: baseline; }
     
@@ -377,19 +378,19 @@
     .row > .large-6.large-offset-6 { width: calc(50% + 50%); }
     
     /* order */
-    .row > [class*=large-order-0], .row > .large-order-0-and-after ~ * { order: 0; }
-    .row > [class*=large-order-1], .row > .large-order-1-and-after ~ * { order: 1; }
-    .row > [class*=large-order-2], .row > .large-order-2-and-after ~ * { order: 2; }
-    .row > [class*=large-order-3], .row > .large-order-3-and-after ~ * { order: 3; }
-    .row > [class*=large-order-4], .row > .large-order-4-and-after ~ * { order: 4; }
-    .row > [class*=large-order-5], .row > .large-order-5-and-after ~ * { order: 5; }
-    .row > [class*=large-order-6], .row > .large-order-6-and-after ~ * { order: 6; }
-    .row > [class*=large-order-7], .row > .large-order-7-and-after ~ * { order: 7; }
-    .row > [class*=large-order-8], .row > .large-order-8-and-after ~ * { order: 8; }
-    .row > [class*=large-order-9], .row > .large-order-9-and-after ~ * { order: 9; }
-    .row > [class*=large-order-10], .row > .large-order-10-and-after ~ * { order: 10; }
-    .row > [class*=large-order-11], .row > .large-order-11-and-after ~ * { order: 11; }
-    .row > [class*=large-order-12], .row > .large-order-12-and-after ~ * { order: 12; }
+    .row > [class*=large-order-0], .row > .large-order-0-and-after ~ *:not([class*=order-]) { order: 0; }
+    .row > [class*=large-order-1], .row > .large-order-1-and-after ~ *:not([class*=order-]) { order: 1; }
+    .row > [class*=large-order-2], .row > .large-order-2-and-after ~ *:not([class*=order-]) { order: 2; }
+    .row > [class*=large-order-3], .row > .large-order-3-and-after ~ *:not([class*=order-]) { order: 3; }
+    .row > [class*=large-order-4], .row > .large-order-4-and-after ~ *:not([class*=order-]) { order: 4; }
+    .row > [class*=large-order-5], .row > .large-order-5-and-after ~ *:not([class*=order-]) { order: 5; }
+    .row > [class*=large-order-6], .row > .large-order-6-and-after ~ *:not([class*=order-]) { order: 6; }
+    .row > [class*=large-order-7], .row > .large-order-7-and-after ~ *:not([class*=order-]) { order: 7; }
+    .row > [class*=large-order-8], .row > .large-order-8-and-after ~ *:not([class*=order-]) { order: 8; }
+    .row > [class*=large-order-9], .row > .large-order-9-and-after ~ *:not([class*=order-]) { order: 9; }
+    .row > [class*=large-order-10], .row > .large-order-10-and-after ~ *:not([class*=order-]) { order: 10; }
+    .row > [class*=large-order-11], .row > .large-order-11-and-after ~ *:not([class*=order-]) { order: 11; }
+    .row > [class*=large-order-12], .row > .large-order-12-and-after ~ *:not([class*=order-]) { order: 12; }
 }
 
 /* xlarge
@@ -424,7 +425,7 @@
     /* self align */
     .row > .xlarge-begin-top { align-self: flex-start; }
     .row > .xlarge-begin-bottom { align-self: flex-end; }
-    .row > .xlarge-full-height { align-self: stretch; }
+    .row > .xlarge-full-height { align-self: stretch; min-height: 100%; }
     .row > .xlarge-center { align-self: center; }
     .row > .xlarge-baseline { align-self: baseline; }
     
@@ -495,19 +496,19 @@
     .row > .xlarge-6.xlarge-offset-6 { width: calc(50% + 50%); }
     
     /* order */
-    .row > [class*=xlarge-order-0], .row > .xlarge-order-0-and-after ~ * { order: 0; }
-    .row > [class*=xlarge-order-1], .row > .xlarge-order-1-and-after ~ * { order: 1; }
-    .row > [class*=xlarge-order-2], .row > .xlarge-order-2-and-after ~ * { order: 2; }
-    .row > [class*=xlarge-order-3], .row > .xlarge-order-3-and-after ~ * { order: 3; }
-    .row > [class*=xlarge-order-4], .row > .xlarge-order-4-and-after ~ * { order: 4; }
-    .row > [class*=xlarge-order-5], .row > .xlarge-order-5-and-after ~ * { order: 5; }
-    .row > [class*=xlarge-order-6], .row > .xlarge-order-6-and-after ~ * { order: 6; }
-    .row > [class*=xlarge-order-7], .row > .xlarge-order-7-and-after ~ * { order: 7; }
-    .row > [class*=xlarge-order-8], .row > .xlarge-order-8-and-after ~ * { order: 8; }
-    .row > [class*=xlarge-order-9], .row > .xlarge-order-9-and-after ~ * { order: 9; }
-    .row > [class*=xlarge-order-10], .row > .xlarge-order-10-and-after ~ * { order: 10; }
-    .row > [class*=xlarge-order-11], .row > .xlarge-order-11-and-after ~ * { order: 11; }
-    .row > [class*=xlarge-order-12], .row > .xlarge-order-12-and-after ~ * { order: 12; }
+    .row > [class*=xlarge-order-0], .row > .xlarge-order-0-and-after ~ *:not([class*=order-]) { order: 0; }
+    .row > [class*=xlarge-order-1], .row > .xlarge-order-1-and-after ~ *:not([class*=order-]) { order: 1; }
+    .row > [class*=xlarge-order-2], .row > .xlarge-order-2-and-after ~ *:not([class*=order-]) { order: 2; }
+    .row > [class*=xlarge-order-3], .row > .xlarge-order-3-and-after ~ *:not([class*=order-]) { order: 3; }
+    .row > [class*=xlarge-order-4], .row > .xlarge-order-4-and-after ~ *:not([class*=order-]) { order: 4; }
+    .row > [class*=xlarge-order-5], .row > .xlarge-order-5-and-after ~ *:not([class*=order-]) { order: 5; }
+    .row > [class*=xlarge-order-6], .row > .xlarge-order-6-and-after ~ *:not([class*=order-]) { order: 6; }
+    .row > [class*=xlarge-order-7], .row > .xlarge-order-7-and-after ~ *:not([class*=order-]) { order: 7; }
+    .row > [class*=xlarge-order-8], .row > .xlarge-order-8-and-after ~ *:not([class*=order-]) { order: 8; }
+    .row > [class*=xlarge-order-9], .row > .xlarge-order-9-and-after ~ *:not([class*=order-]) { order: 9; }
+    .row > [class*=xlarge-order-10], .row > .xlarge-order-10-and-after ~ *:not([class*=order-]) { order: 10; }
+    .row > [class*=xlarge-order-11], .row > .xlarge-order-11-and-after ~ *:not([class*=order-]) { order: 11; }
+    .row > [class*=xlarge-order-12], .row > .xlarge-order-12-and-after ~ *:not([class*=order-]) { order: 12; }
 }
 
 /* xxlarge
@@ -542,7 +543,7 @@
     /* self align */
     .row > .xxlarge-begin-top { align-self: flex-start; }
     .row > .xxlarge-begin-bottom { align-self: flex-end; }
-    .row > .xxlarge-full-height { align-self: stretch; }
+    .row > .xxlarge-full-height { align-self: stretch; min-height: 100%; }
     .row > .xxlarge-center { align-self: center; }
     .row > .xxlarge-baseline { align-self: baseline; }
     
@@ -613,17 +614,17 @@
     .row > .xxlarge-6.xxlarge-offset-6 { width: calc(50% + 50%); }
     
     /* order */
-    .row > [class*=xxlarge-order-0], .row > .xxlarge-order-0-and-after ~ * { order: 0; }
-    .row > [class*=xxlarge-order-1], .row > .xxlarge-order-1-and-after ~ * { order: 1; }
-    .row > [class*=xxlarge-order-2], .row > .xxlarge-order-2-and-after ~ * { order: 2; }
-    .row > [class*=xxlarge-order-3], .row > .xxlarge-order-3-and-after ~ * { order: 3; }
-    .row > [class*=xxlarge-order-4], .row > .xxlarge-order-4-and-after ~ * { order: 4; }
-    .row > [class*=xxlarge-order-5], .row > .xxlarge-order-5-and-after ~ * { order: 5; }
-    .row > [class*=xxlarge-order-6], .row > .xxlarge-order-6-and-after ~ * { order: 6; }
-    .row > [class*=xxlarge-order-7], .row > .xxlarge-order-7-and-after ~ * { order: 7; }
-    .row > [class*=xxlarge-order-8], .row > .xxlarge-order-8-and-after ~ * { order: 8; }
-    .row > [class*=xxlarge-order-9], .row > .xxlarge-order-9-and-after ~ * { order: 9; }
-    .row > [class*=xxlarge-order-10], .row > .xxlarge-order-10-and-after ~ * { order: 10; }
-    .row > [class*=xxlarge-order-11], .row > .xxlarge-order-11-and-after ~ * { order: 11; }
-    .row > [class*=xxlarge-order-12], .row > .xxlarge-order-12-and-after ~ * { order: 12; }
+    .row > [class*=xxlarge-order-0], .row > .xxlarge-order-0-and-after ~ *:not([class*=order-]) { order: 0; }
+    .row > [class*=xxlarge-order-1], .row > .xxlarge-order-1-and-after ~ *:not([class*=order-]) { order: 1; }
+    .row > [class*=xxlarge-order-2], .row > .xxlarge-order-2-and-after ~ *:not([class*=order-]) { order: 2; }
+    .row > [class*=xxlarge-order-3], .row > .xxlarge-order-3-and-after ~ *:not([class*=order-]) { order: 3; }
+    .row > [class*=xxlarge-order-4], .row > .xxlarge-order-4-and-after ~ *:not([class*=order-]) { order: 4; }
+    .row > [class*=xxlarge-order-5], .row > .xxlarge-order-5-and-after ~ *:not([class*=order-]) { order: 5; }
+    .row > [class*=xxlarge-order-6], .row > .xxlarge-order-6-and-after ~ *:not([class*=order-]) { order: 6; }
+    .row > [class*=xxlarge-order-7], .row > .xxlarge-order-7-and-after ~ *:not([class*=order-]) { order: 7; }
+    .row > [class*=xxlarge-order-8], .row > .xxlarge-order-8-and-after ~ *:not([class*=order-]) { order: 8; }
+    .row > [class*=xxlarge-order-9], .row > .xxlarge-order-9-and-after ~ *:not([class*=order-]) { order: 9; }
+    .row > [class*=xxlarge-order-10], .row > .xxlarge-order-10-and-after ~ *:not([class*=order-]) { order: 10; }
+    .row > [class*=xxlarge-order-11], .row > .xxlarge-order-11-and-after ~ *:not([class*=order-]) { order: 11; }
+    .row > [class*=xxlarge-order-12], .row > .xxlarge-order-12-and-after ~ *:not([class*=order-]) { order: 12; }
 }
