--- a/examples/examples.css
+++ b/examples/examples.css
@@ -4,13 +4,14 @@
     background: #fff;
 }
 
-.row .column {
+.block, .block-padding {
     border: 1px solid rgba(0, 0, 0 , .1);
+    height: 100%;
     background: #f6f6f6;
 }
 
-.row .column:nth-child(2n+2) {
-    background: #ebebeb;
+.block-padding {
+    padding: 0 1em;
 }
 
 .margin-medium {
